<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        	xmlns:app="http://schemas.android.com/apk/res-auto">
        	
      
       <item android:id="@+id/action_add"
           	 android:icon="@drawable/ic_action_new"
           	 android:title="@string/action_add"
           	 app:showAsAction="always"           
           /> 
        
        <item android:id="@+id/action_remove"
           	 android:icon="@drawable/ic_action_512px_minus_sign_font_awesome"
           	 android:title="@string/action_remove"
           	 app:showAsAction="always"           
           /> 
           
        <item android:id="@+id/settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/action_settings"
            app:showAsAction="always"/>
    </menu>
