<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/text_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dip"
            android:text="@string/rule" />

        <Spinner
            android:id="@+id/spinner_rule_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_rule"
            android:layout_alignLeft="@+id/salary_category"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@+id/text_rule"
            android:entries="@array/rules"
            android:prompt="@string/rule" />

        <TextView
            android:id="@+id/text_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_rule"
            android:padding="20dip"
            android:text="@string/repeat" />

        <ToggleButton
            android:id="@+id/toggle_repeat"
            android:layout_width="56dp"
            android:layout_height="36dp"
            android:layout_alignBaseline="@+id/text_repeat"
            android:layout_alignLeft="@+id/salary_category"
            android:layout_toRightOf="@+id/text_repeat"
            android:background="@drawable/toggle_selector"
            android:gravity="center"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn=""
            />

            <TextView
                android:id="@+id/time_now"
                android:paddingLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/text_repeat"
                android:layout_toRightOf="@+id/toggle_repeat"
                android:gravity="center"
                />


        <TextView
            android:id="@+id/text_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_repeat"
            android:padding="20dip"
            android:text="@string/text_category" />

        <Spinner
            android:id="@+id/salary_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_category"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/text_category"
            android:prompt="@string/category" />

        <TextView
            android:id="@+id/text_salary_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_category"
            android:padding="20dip"
            android:text="@string/text_amount" />

        <AutoCompleteTextView
            android:id="@+id/salary_amount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_salary_amount"
            android:layout_alignLeft="@+id/salary_category"
            android:layout_toRightOf="@+id/text_salary_amount"
            android:gravity="center"
            android:hint="@string/amount"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textColorHint="#E0E0E0" />

        <TextView
            android:id="@+id/text_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_salary_amount"
            android:padding="20dip"
            android:text="@string/text_notes" />

        <AutoCompleteTextView
            android:id="@+id/salary_notes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_notes"
            android:layout_alignLeft="@+id/salary_category"
            android:layout_toRightOf="@+id/text_notes"
            android:gravity="center"
            android:hint="@string/notes"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:textColorHint="#E0E0E0" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_notes"
            android:padding="20dip"
            android:text="@string/text_date" />

        <EditText
            android:id="@+id/salary_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_date"
            android:layout_alignLeft="@+id/salary_category"
            android:layout_toRightOf="@+id/text_date"
            android:focusable="false"
            android:gravity="center"
            android:inputType="date"
            android:singleLine="true" />
    </RelativeLayout>


</ScrollView>
