<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/text_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dip"
            android:text="@string/text_category" />

        <Spinner
            android:id="@+id/spinner_category_expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_category"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@+id/text_category"
            android:prompt="@string/category" />

        <Button
            android:id="@+id/add_cat"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBaseline="@+id/text_category"
            android:layout_alignParentRight="true"
            android:background="@drawable/circle"
            android:text="+"
            android:textColor="#FFFFFF"
            android:onClick="addCategories"/>

        <TextView
            android:id="@+id/text_expenses_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_category"
            android:padding="20dip"
            android:text="@string/text_amount" />

        <AutoCompleteTextView
            android:id="@+id/expenses_amount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_expenses_amount"
            android:layout_alignLeft="@+id/spinner_category_income"
            android:layout_toRightOf="@+id/text_expenses_amount"
            android:gravity="center"
            android:hint="@string/amount"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textColorHint="#E0E0E0" />

        <TextView
            android:id="@+id/text_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_expenses_amount"
            android:padding="20dip"
            android:text="@string/text_notes" />

        <AutoCompleteTextView
            android:id="@+id/expenses_notes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_notes"
            android:layout_alignLeft="@+id/spinner_category_income"
            android:layout_toRightOf="@+id/text_notes"
            android:gravity="center"
            android:hint="@string/notes"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:nextFocusDown="@+id/expense_date"
            android:singleLine="true"
            android:textColorHint="#E0E0E0" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_notes"
            android:padding="20dip"
            android:text="@string/text_date" />

        <EditText
            android:id="@+id/expense_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_date"
            android:layout_alignLeft="@+id/spinner_category_income"
            android:layout_toRightOf="@+id/text_date"
            android:focusable="false"
            android:gravity="center"
            android:inputType="date"
            android:singleLine="true" />
    </RelativeLayout>

</ScrollView>